fix missing comment gap on changelog

--- a/resources/css/bem/comments.less
+++ b/resources/css/bem/comments.less
@@ -32,6 +32,10 @@
     }
   }
 
+  &--changelog{
+    margin-bottom: 0;
+  }
+
   &__count {
     font-size: 80%;
     padding: 5px 10px;
