--- a/resources/css/bem/osu-page.less
+++ b/resources/css/bem/osu-page.less
@@ -101,7 +101,6 @@
     background-color: @osu-colour-b4;
     display: flex;
     flex-direction: column;
-    margin-bottom: 0;
   }
 
   &--comment {
